# BarnacleBoy

./: CONTRIBUTING.rst  LICENSE  README.md  mypy.ini  pyproject.toml  test.ipynb
.github/workflows/: codeql.yml  testing.yml
barnacleboy/: __init__.py  config.py
barnacleboy/mermaid/: base.py  entity_relation_diagram.py  er_diagram.py  flowchart.py  gitgraph.py  piechart.py  user_journey.py  utils.py
barnacleboy/templates/: mermaid_diagram.html
docs/: conf.py  index.rst
docs/examples/: README.rst  piechart.ipynb
docs/pages/: index.rst
docs/pages/graphs/: flowchart.rst
src/mermaid/: base.py  flowchart.py  utils.py
tests/: test_entity_relation_diagram.py  test_flow.py  test_flowchart.py  test_gitgraph.py  test_piechart.py  test_user_journey.py
