[tool.poetry]
name = "barnacleboy"
version = "0.0.1.alpha"
description = ""
authors = ["Reinder Vos de Wael <reinder.vosdewael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

